add_executable(746_minCostClimbingStairs 746_minCostClimbingStairs.cpp)
add_executable(3693_climbStairs 3693_climbStairs.cpp)
add_executable(2976_minimumCost 2976_minimumCost.cpp)
add_executable(744_nextGreatestLetter 744_nextGreatestLetter.cpp)
add_executable(34_searchRange 34_searchRange.cpp)
add_executable(35_searchInsert 35_searchInsert.cpp)
add_executable(2529_maximumCount 2529_maximumCount.cpp)