add_executable(1385_findTheDistanceValue 1385_findTheDistanceValue.cpp)
add_executable(1653_minimumDeletions 1653_minimumDeletions.cpp)
add_executable(110_isBalanced 110_isBalanced.cpp)
add_executable(1382_balanceBST 1382_balanceBST.cpp)
add_executable(2389_answerQueries 2389_answerQueries.cpp)
add_executable(3713_longestBalanced 3713_longestBalanced.cpp)
add_executable(868_binaryGap 868_binaryGap.cpp)