add_executable(1980_findDifferentBinaryString 1980_findDifferentBinaryString.cpp)
add_executable(3129_numberOfStableArrays 3129_numberOfStableArrays.cpp)
add_executable(1009_bitwiseComplement 1009_bitwiseComplement.cpp)
add_executable(3600_maxStability 3600_maxStability.cpp)
add_executable(1415_getHappyString 1415_getHappyString.cpp)
add_executable(1878_getBiggestThree 1878_getBiggestThree.cpp)
add_executable(1727_largestSubmatrix 1727_largestSubmatrix.cpp)
add_executable(3296_minNumberOfSeconds 3296_minNumberOfSeconds.cpp)
add_executable(3070_countSubmatrices 3070_countSubmatrices.cpp)
add_executable(3212_numberOfSubmatrices 3212_numberOfSubmatrices.cpp)
add_executable(1_twoSum 1_twoSum.cpp)
add_executable(3643_reverseSubmatrix 3643_reverseSubmatrix.cpp)
add_executable(1886_findRotation 1886_findRotation.cpp)
add_executable(1594_maxProductPath 1594_maxProductPath.cpp)
add_executable(2906_constructProductMatrix 2906_constructProductMatrix.cpp)
add_executable(3567_minAbsDiff 3567_minAbsDiff.cpp)
add_executable(3546_canPartitionGrid 3546_canPartitionGrid.cpp)
add_executable(3548_canPartitionGrid 3548_canPartitionGrid.cpp)
add_executable(2946_reSimilar 2946_reSimilar.cpp)
add_executable(2573_findTheString 2573_findTheString.cpp)
add_executable(2839_canBeEqual 2839_canBeEqual.cpp)
add_executable(2840_checkStrings 2840_checkStrings.cpp)