add_executable(2751_survivedRobotsHealths 2751_survivedRobotsHealths.cpp)
add_executable(3418_maximumAmount 3418_maximumAmount.cpp)
add_executable(3661_maxWalls 3661_maxWalls.cpp)
add_executable(2080_RangeFreqQuery 2080_RangeFreqQuery.cpp)
add_executable(3653_xorAfterQueries 3653_xorAfterQueries.cpp)
add_executable(3488_solveQueries 3488_solveQueries.cpp)
add_executable(2563_countFairPairs 2563_countFairPairs.cpp)
add_executable(2070_maximumBeauty 2070_maximumBeauty.cpp)
add_executable(1146_SnapshotArray 1146_SnapshotArray.cpp)
add_executable(3508_Router 3508_Router.cpp)
add_executable(1283_smallestDivisor 1283_smallestDivisor.cpp)
add_executable(2187_minimumTime 2187_minimumTime.cpp)
add_executable(1011_shipWithinDays 1011_shipWithinDays.cpp)
add_executable(875_minEatingSpeed 875_minEatingSpeed.cpp)
add_executable(3639_minTime 3639_minTime)
add_executable(2226_maximumCandies 2226_maximumCandies.cpp)
add_executable(2982_maximumLength 2982_maximumLength.cpp)
add_executable(1512_numIdenticalPairs 1512_numIdenticalPairs.cpp)
add_executable(2441_findMaxK 2441_findMaxK.cpp)
add_executable(121_maxProfit 121_maxProfit.cpp)
add_executable(3623_countTrapezoids 3623_countTrapezoids.cpp)